add au and tr
